[package]
name = "yarn_cache"
version = "0.1.0"
edition = "2021"
description = "A special-purpose graph database for storing nodes and arcs"

[dependencies]
byteorder = "1.4"
crc32fast = "1.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
lru = "0.10"

[dev-dependencies]
temp-dir = "0.1"
rand = "0.8"
